k8s/warehouse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: warehouse-app
  template:
    metadata:
      labels:
        app: warehouse-app
    spec:
      containers:
        - name: warehouse
          image: smith1984/svc_warehouse:0.0.1
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8082
          livenessProbe:
            httpGet:
              port: 8082
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8082
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: "/app/resources/application.yaml"
              subPath: "application.yaml"
              readOnly: true
            - name: logback
              mountPath: "/app/resources/logback.xml"
              subPath: "logback.xml"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config-application-warehouse
        - name: logback
          configMap:
            name: config-logback-warehouse
