k8s/warehouse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
spec:
  selector:
    app: warehouse-app
  ports:
    - port: 80
      name: http
      targetPort: web
  type: ClusterIP
