k8s/warehouse/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warehouse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - http:
        paths:
          - path: /warehouse(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: warehouse-service
                port:
                  number: 80
  ingressClassName: nginx
